# task_api

./: README.md  app.db  config.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py
app/models/: task.py  user.py
app/routes/: auth.py  task.py  task_routes.py
app/services/: task_service.py
migrations/versions/: 40ecd314ca7b_recreating_migrations.py
tests/: conftest.py  test_auth.py  test_routes.py
